manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-bidistream
  namespace: default
spec:
  selector:
    matchLabels:
      app: grpc-bidistream
  replicas: 1
  template:
    metadata:
      labels:
        app: grpc-bidistream
    spec:
      terminationGracePeriodSeconds: 5
      restartPolicy: Always
      containers:
        - name: server
          image: soichisumi0/grpc-bidistream-server:v0.1.2
          imagePullPolicy: IfNotPresent
