manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-bidistream
  namespace: default
spec:
  selector:
    app: grpc-bidistream
  ports:
    - name: grpc
      port: 80
      protocol: TCP
      targetPort: 8080
