manifests/vitualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: example
  namespace: default
spec:
  gateways:
    - example
  hosts:
    - "*"
  http:
    - route:
        - destination:
            host: grpc-bidistream
            port:
              number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: example-2
  namespace: default
spec:
  gateways:
    - example-2
  hosts:
    - "*"
  http:
    - route:
        - destination:
            host: grpc-bidistream
            port:
              number: 80
